@@ -3,7 +3,7 @@ package org.cswteams.ms3.rest;
 import org.cswteams.ms3.control.concreteShift.IConcreteShiftController;
 import org.cswteams.ms3.control.scheduler.ISchedulerController;
 import org.cswteams.ms3.control.utils.RispostaViolazioneVincoli;
-import org.cswteams.ms3.dto.ConcreteShiftDTO;
+import org.cswteams.ms3.dto.concreteshift.GetAllConcreteShiftDTO;
 import org.cswteams.ms3.dto.ModifyConcreteShiftDTO;
 import org.cswteams.ms3.dto.RegisterConcreteShiftDTO;
 import org.cswteams.ms3.entity.Schedule;
@@ -19,23 +19,21 @@ import java.text.ParseException;
 import java.util.Set;
 
 @RestController
-@RequestMapping("/assegnazioneturni/")
+@RequestMapping("/concrete-shifts/")
 public class ConcreteShiftRestEndpoint {
 
     @Autowired
-    private IConcreteShiftController controllerAssegnazioneTurni;
+    private IConcreteShiftController concreteShiftController;
 
     @Autowired
     private ISchedulerController controllerScheduler;
 
     @RequestMapping(method = RequestMethod.POST)
-    public ResponseEntity<?> creaTurnoAssegnato(@RequestBody RegisterConcreteShiftDTO assegnazione) {
+    public ResponseEntity<?> createNewConcreteShift(@RequestBody RegisterConcreteShiftDTO assegnazione) {
 
         Schedule schedule;
 
         if (assegnazione != null) {
-            System.out.println(assegnazione.getMansione());
-
             // Se l'utente chiede l'aggiunta forzata di un assegnazione viene fatto
             // controllo solo sui vincoli non violabili
             try {
@@ -65,10 +63,10 @@ public class ConcreteShiftRestEndpoint {
         return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
     }
 
-    @RequestMapping(method = RequestMethod.GET, path = "/utente_id={idUtente}")
-    public ResponseEntity<?> leggiTurniUtente(@PathVariable Long idUtente) throws ParseException {
-        if (idUtente != null) {
-            Set <ConcreteShiftDTO> c = controllerAssegnazioneTurni.leggiTurniUtente(idUtente);
+    @RequestMapping(method = RequestMethod.GET, path = " /user_id={userID}")
+    public ResponseEntity<?> getSingleDoctorConcreteShift(@PathVariable Long userID) throws ParseException {
+        if (userID != null) {
+            Set <GetAllConcreteShiftDTO> c = concreteShiftController.getSingleDoctorConcreteShifts(userID);
             if (c == null) {
                 return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             }
@@ -78,9 +76,9 @@ public class ConcreteShiftRestEndpoint {
     }
 
     @RequestMapping(method = RequestMethod.GET)
-    public ResponseEntity<?> leggiTurniAssegnati() throws ParseException {
-        Set<ConcreteShiftDTO> tuttiITurni = controllerAssegnazioneTurni.leggiTurniAssegnati();
-        return new ResponseEntity<>(tuttiITurni, HttpStatus.FOUND);
+    public ResponseEntity<?> getAllConcreteShifts() throws ParseException {
+        Set<GetAllConcreteShiftDTO> allConcreteShifts = concreteShiftController.getAllConcreteShifts();
+        return new ResponseEntity<>(allConcreteShifts, HttpStatus.FOUND);
     }
 
 
@@ -90,7 +88,7 @@ public class ConcreteShiftRestEndpoint {
      * @return
      */
     @RequestMapping(method = RequestMethod.PUT)
-    public ResponseEntity<?> modificaAssegnazioneTurno(@RequestBody ModifyConcreteShiftDTO modifyConcreteShiftDTO)  {
+    public ResponseEntity<?> modifyConcreteShift(@RequestBody ModifyConcreteShiftDTO modifyConcreteShiftDTO)  {
 
         //Chiedo al controller di modificare e salvare nel database l'assegnazione turno modificata
         Schedule schedule;
@@ -106,7 +104,7 @@ public class ConcreteShiftRestEndpoint {
 
             RispostaViolazioneVincoli risposta = new RispostaViolazioneVincoli();
 
-            risposta.getMessagges().add(schedule.getViolatedConstraints().getLast().getDescription());
+            risposta.getMessagges().add(schedule.getViolatedConstraints().get(schedule.getViolatedConstraints().size() - 1).getDescription());
             for (Constraint vclEntry : schedule.getViolatedConstraints()) {
                 risposta.getMessagges().add(vclEntry.getDescription());
             }
@@ -120,7 +118,7 @@ public class ConcreteShiftRestEndpoint {
 
 
     @RequestMapping(method = RequestMethod.DELETE, path = "/{idAssegnazione}")
-    public ResponseEntity<?> rimuoviAssegnazione(@PathVariable Long idAssegnazione)  {
+    public ResponseEntity<?> deleteConcreteShift(@PathVariable Long idAssegnazione)  {
         if (idAssegnazione != null) {
             if(controllerScheduler.removeConcreteShift(idAssegnazione)){
                 return new ResponseEntity<>(HttpStatus.ACCEPTED);
